# aegis

./: .env.example  .gitignore  DEMO.md  README.es.md  README.md  pyproject.toml
.github/workflows/: ci.yml
dashboard/: .gitignore  README.md  biome.json  next.config.mjs  package-lock.json  package.json  vitest.config.ts
dashboard/app/: layout.tsx  page.tsx
dashboard/components/: AbsentPanel.tsx  Card.tsx  ClearPanel.tsx  DashboardHeader.tsx  EvalScorecard.tsx  EvidencePanel.tsx  KappaPanel.tsx  LanguageToggle.tsx  RedteamPanel.tsx  RunsList.tsx  StatusBadge.tsx  TrendsChart.tsx
dashboard/components/__tests__/: AbsentPanel.test.tsx  StatusBadge.test.tsx  i18n.test.tsx  panels.test.tsx
dashboard/fixtures/: README.md  sample-calibration.json  sample-eval.json  sample-evidence.json  sample-redteam.json
dashboard/lib/: format.ts  reports.ts  status.ts  trend.ts  types.ts
dashboard/lib/__tests__/: parse.test.ts  reports.test.ts  status.test.ts  trend.test.ts
dashboard/lib/i18n/: LocaleProvider.tsx  dictionaries.ts
dashboard/lib/i18n/__tests__/: dictionaries.test.ts
dashboard/lib/parse/: calibration.ts  eval.ts  evidence.ts  raw.ts  redteam.ts
scripts/: demo.sh
src/aegis/: __init__.py  cli.py
src/aegis/evals/: __init__.py  baseline.py  clear.py  dataset.py  l1_session.py  l2_trace.py  l3_tool.py  models.py  persistence.py  pricing.py  report.py  result.py  runner.py  telemetry_bridge.py  text.py  trajectory.py
src/aegis/evals/baselines/: golden.json
src/aegis/evals/calibration/: __init__.py  dataset.py  kappa.py  models.py  report.py  runner.py
src/aegis/evals/datasets/: calibration.jsonl  golden.jsonl
src/aegis/evals/judge/: __init__.py  agent.py  base.py  ensemble.py  factory.py  geval.py  mock.py  prompts.py
src/aegis/evidence/: __init__.py  builder.py  loader.py  mapping.py  models.py  pdf.py  persistence.py
src/aegis/gateway/: __init__.py  config.py  errors.py  main.py  proxy.py  schemas.py  telemetry.py  upstream.py
src/aegis/gateway/providers/: __init__.py  anthropic_provider.py  anthropic_translate.py
src/aegis/guardrails/: __init__.py  content.py  injection.py  pii.py  pii_engine.py  pii_presidio.py  pipeline.py  policy.py  result.py  toxicity.py
src/aegis/redteam/: __init__.py  baseline.py  dataset.py  findings.py  models.py  outcome.py  policy_fixture.py  report.py  runner.py
src/aegis/redteam/baselines/: redteam.json
src/aegis/redteam/datasets/: attacks.jsonl
tests/: conftest.py  test_anthropic_errors.py  test_anthropic_live.py  test_anthropic_provider.py  test_anthropic_translate.py  test_config.py  test_errors.py  test_evals_agent_judge.py  test_evals_baseline.py  test_evals_calibration_cli.py  test_evals_calibration_compute.py  test_evals_calibration_dataset.py  test_evals_calibration_kappa.py  test_evals_calibration_live.py  test_evals_calibration_runner.py  test_evals_clear.py  test_evals_cli.py  test_evals_dataset.py  test_evals_gate_cli.py  test_evals_golden.py  test_evals_golden_f4.py  test_evals_judge_ensemble.py  test_evals_judge_geval.py  test_evals_judge_geval_real.py  test_evals_judge_live.py  test_evals_judge_mock.py  test_evals_judge_runner.py  test_evals_l1_session.py  test_evals_l2_trace.py  test_evals_l3_tool.py  test_evals_models.py  test_evals_pricing.py  test_evals_runner.py  test_evals_text.py  test_evals_trajectory.py  test_evidence_builder.py  test_evidence_cli.py  test_evidence_loader.py  test_evidence_mapping.py  test_evidence_pdf.py  (+28 more)
