[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis"
version = "0.1.0"
description = "A reliability + security + governance gateway for LLMs and agents (OpenAI-compatible proxy)."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Marcos Mata García" }]
keywords = ["llm", "guardrails", "evals", "red-team", "owasp", "ai-governance", "gateway"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.7",
    # OTel API + SDK only (NOT the OTLP exporter): pure-python, keyless, no network,
    # so CI exercises the real GenAI span path + the CLEAR telemetry bridge fully
    # OFFLINE via the in-memory exporter — and still hits the "exporter=otlp but the
    # OTLP package is absent => clean config error" branch (the exporter ships only
    # in the [otel] extra below).
    "opentelemetry-api>=1.38",
    "opentelemetry-sdk>=1.38",
]
# Optional richer PII engine (F2). The deterministic regex engine is the default
# and needs none of this. Presidio also requires a spaCy model at runtime, e.g.
# `python -m spacy download en_core_web_sm`.
guardrails = [
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
]
# Optional real provider SDK (Anthropic / Claude). Lazy-imported only when
# AEGIS_DEFAULT_PROVIDER=anthropic; the gateway runs on the deterministic mock
# without it. CI installs only [dev], so the unit suite stays green with no SDK
# and no API key (the one live test self-skips).
anthropic = [
    "anthropic>=0.40",
]
# Optional OpenTelemetry observability (F1.x). OFF by default (AEGIS_OTEL_ENABLED);
# the gateway is a byte-identical F1 passthrough without it. api+sdk give in-process
# GenAI spans with NO collector; the OTLP/proto-http exporter (for an OTLP collector
# or Langfuse) is included here and lazy-imported only when AEGIS_OTEL_EXPORTER=otlp,
# so the default install never pulls protobuf and never touches the network.
otel = [
    "opentelemetry-api>=1.38",
    "opentelemetry-sdk>=1.38",
    "opentelemetry-exporter-otlp-proto-http>=1.38",
]

[project.scripts]
aegis = "aegis.cli:main"

[project.urls]
Repository = "https://github.com/marcosmatalab/aegis"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency markers are called in argument defaults by design (B008).
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Form",
    "fastapi.File",
    "fastapi.Security",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
